--- a/style.css
+++ b/style.css
@@ -44,6 +44,10 @@
   border-radius: 10px;
 }
 
+.intros a:hover{
+  background-color: rgb(27 8 8 / 30%);
+}
+
 .boxes {
   margin-top: 30px;
   display: flex;
